--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ aside p {
 }
 
 nav a {
-  color: #0befc9; 
+  color: #072d26; 
   text-decoration: none;
   padding: 4px 8px;
   display: inline-block;
@@ -112,4 +112,5 @@ nav p {
     color: white;
     font-weight: bold;
 }
+
 
